[gd_scene load_steps=12 format=3 uid="uid://d3iqbah56tugs"]

[ext_resource type="Script" path="res://Script/Ash.gd" id="1_f8kr6"]
[ext_resource type="Texture2D" uid="uid://833cfft76d57" path="res://Art/New_Assets/Pixel Cat (Orange) - Sit.png" id="2_ksata"]
[ext_resource type="Texture2D" uid="uid://dsvv3qfuo816b" path="res://Art/New_Assets/Pixel Cat (Orange) - Walk.png" id="3_rmcwf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ggj62"]
atlas = ExtResource("2_ksata")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_awpkh"]
atlas = ExtResource("2_ksata")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06rxk"]
atlas = ExtResource("3_rmcwf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_41xud"]
atlas = ExtResource("3_rmcwf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwlrx"]
atlas = ExtResource("3_rmcwf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv58l"]
atlas = ExtResource("3_rmcwf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kwr3y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggj62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awpkh")
}],
"loop": false,
"name": &"Sit",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_06rxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41xud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwlrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv58l")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bium5"]
radius = 34.5145

[node name="Orange_Cat" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_f8kr6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_kwr3y")
animation = &"Sit"
flip_h = true

[node name="HitboxLeft" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(2, 2)
polygon = PackedVector2Array(-11.5, -2.5, -12.5, -2, -12.5, 1.5, -13.5, 2, -13.5, 4.5, -9.5, 8.5, -9.5, 12, -8.5, 12.5, -8.5, 16, 7, 16, 7, 14.5, 7.5, 14, 7.5, 12.5, 8.5, 11.5, 10.5, 11.5, 11.5, 12.5, 11.5, 13.5, 12.5, 14.5, 13.5, 13.5, 13.5, 12.5, 11, 9.5, 7.5, 9.5, 6.5, 10.5, 1.5, 5.5, -1.5, 5.5, -2.5, 4.5, -2.5, 2.5, -3.5, 1.5, -3.5, -0.5, -5.5, -2.5, -7.5, -0.5, -9.5, -0.5)

[node name="HitboxRight" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(11, -6, 7, -1, 7, 3, 5, 4, 5, 9, 3, 11, -3, 11, -13, 21, -15, 19, -21, 19, -27, 24, -27, 27, -25, 29, -23, 27, -23, 25, -21, 23, -17, 23, -15, 25, -15, 27, -13, 29, -13, 32, 17, 32, 17, 25, 19, 24, 19, 17, 27, 10, 27, 5, 25, 3, 25, -3, 23, -5, 19, -1, 15, -1)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="StaticBody2D" type="StaticBody2D" parent="."]
scale = Vector2(2, 2)
collision_layer = 128
collision_mask = 2

[node name="Hitbox" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_bium5")

[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
